[RAG] Fix frontend scrollbar bug

--- a/wattelse/chatbot/frontend/chatbot/static/chatbot/chatbot.css
+++ b/wattelse/chatbot/frontend/chatbot/static/chatbot/chatbot.css
@@ -14,7 +14,7 @@
  /* Wrapper for the whole page */
 .wrapper {
   display: flex;
-  height: 92%;
+  height: 89%;
 }
 
 /* ******************************** */
